# PDL-Advanced-SQL-Material-Prep

./: .gitignore  COCKROACHDB.md  Makefile  Pipfile  README.md  TODO  aircraft.py  airports.py  build-db.sh  build-docker.sh  build-local.sh  build-postgres.sh  config.sh  copyright.py  explain.sql  first_names.txt  iata_codes.csv  last_names.txt  main.py  models.py  passengers.py  pyproject.toml  questions.md  questions.txt  requirements.txt  reset-db.sh  routes.py  server-code-template.txt  utils.py
packer/: env.sh  init.sh  template.json
