[tool.poetry]
name = "pdl-advanced-sql-material-prep"
version = "0.1.0"
description = ""
authors = ["Paul Logston <paul.logston@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "1.3.12"
psycopg2-binary = "2.8.4"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
